--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -9,43 +9,65 @@ Size=419,561
 Collapsed=0
 
 [Window][Main Texture Page]
-Pos=280,19
-Size=1040,881
+Pos=542,81
+Size=1058,819
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000008,2
 
 [Window][Game]
-Pos=280,19
-Size=1040,881
+Pos=542,81
+Size=1058,819
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000008,1
 
 [Window][MainDockspaceWindow]
-Pos=0,0
-Size=1600,900
+Pos=0,61
+Size=1600,839
 Collapsed=0
 
 [Window][Scene Hierarchy Tester]
 Pos=0,19
-Size=278,881
+Size=275,1035
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=60,60
-Size=32,35
+Pos=270,81
+Size=270,819
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Inspector Tester]
-Pos=1322,19
-Size=278,881
+Pos=1361,81
+Size=239,819
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Room Editor]
+Pos=542,81
+Size=1058,819
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Room Hierarchy]
+Pos=0,81
+Size=268,819
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Toolbar]
+Pos=0,18
+Size=1600,61
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x48A148F3 Window=0xB3E485BE Pos=0,19 Size=1600,881 Split=X Selected=0x26816F31
-  DockNode    ID=0x00000003 Parent=0x48A148F3 SizeRef=1320,1035 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=278,881 Selected=0xAAF7A736
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1040,881 CentralNode=1 Selected=0x26816F31
-  DockNode    ID=0x00000004 Parent=0x48A148F3 SizeRef=278,1035 Selected=0x1196748E
+DockSpace         ID=0x48A148F3 Window=0xB3E485BE Pos=0,81 Size=1600,819 Split=X Selected=0x26816F31
+  DockNode        ID=0x00000005 Parent=0x48A148F3 SizeRef=268,881 Selected=0xA1E7B0D8
+  DockNode        ID=0x00000006 Parent=0x48A148F3 SizeRef=1330,881 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=1089,881 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=275,881 Selected=0xAAF7A736
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1354,881 Split=X Selected=0x4ECA0541
+        DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=270,819 Selected=0xE7039252
+        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=1330,819 CentralNode=1 Selected=0xC7A91D17
+    DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=239,881 Selected=0x1196748E
 
