--- a/BeefSpace.toml
+++ b/BeefSpace.toml
@@ -1,5 +1,5 @@
 FileVersion = 1
-Projects = {FantyEngine = {Path = "."}, Sandbox = {Path = "Sandbox"}, bon = {Path = "vendor/bon"}, ImGui = {Path = "vendor/imgui-beef"}}
+Projects = {FantyEngine = {Path = "."}, Sandbox = {Path = "Sandbox"}, bon = {Path = "vendor/bon"}, ImGui = {Path = "vendor/imgui-beef"}, FantyEditor = {Path = "FantyEditor"}}
 
 [Workspace]
-StartupProject = "Sandbox"
+StartupProject = "FantyEditor"
