--- a/FantyEditor/imgui.ini
+++ b/FantyEditor/imgui.ini
@@ -1,37 +1,70 @@
 [Window][Debug##Default]
-Pos=272,124
+Pos=231,3
 Size=782,653
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=261,224
-Size=578,345
+Pos=1353,82
+Size=247,818
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Toolbar]
-Pos=0,0
-Size=1600,62
+Pos=-1,21
+Size=1602,62
 Collapsed=0
 
 [Window][MainDockspaceWindow]
-Pos=0,61
-Size=1600,839
+Pos=0,64
+Size=1600,836
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,61
-Size=209,839
+Pos=0,82
+Size=231,818
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Room Editor]
-Pos=211,61
-Size=1389,839
+Pos=233,82
+Size=1118,818
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][About Dear ImGui]
+Pos=60,60
+Size=500,132
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=628,168
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=609,996
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=324,112
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=374,1048
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=125,44
+Size=844,728
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x48A148F3 Window=0xB3E485BE Pos=0,61 Size=1600,839 Split=X
-  DockNode  ID=0x00000001 Parent=0x48A148F3 SizeRef=209,984 Selected=0x6F7CD859
-  DockNode  ID=0x00000002 Parent=0x48A148F3 SizeRef=1661,984 CentralNode=1 Selected=0x4ECA0541
+DockSpace     ID=0x48A148F3 Window=0xB3E485BE Pos=0,82 Size=1600,818 Split=X
+  DockNode    ID=0x00000003 Parent=0x48A148F3 SizeRef=1623,993 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=231,984 Selected=0x6F7CD859
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1390,984 CentralNode=1 Selected=0x4ECA0541
+  DockNode    ID=0x00000004 Parent=0x48A148F3 SizeRef=247,993 Selected=0xE87781F4
 
