--- a/FantyEditor/imgui.ini
+++ b/FantyEditor/imgui.ini
@@ -21,13 +21,13 @@ Collapsed=0
 
 [Window][Asset Browser]
 Pos=0,83
-Size=203,817
+Size=292,586
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000005,0
 
 [Window][Room Editor]
-Pos=205,83
-Size=1146,817
+Pos=294,83
+Size=1306,817
 Collapsed=0
 DockId=0x00000002,0
 
@@ -61,10 +61,18 @@ Pos=125,44
 Size=844,728
 Collapsed=0
 
+[Window][Output]
+Pos=0,671
+Size=292,229
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0x48A148F3 Window=0xB3E485BE Pos=0,83 Size=1600,817 Split=X
-  DockNode    ID=0x00000003 Parent=0x48A148F3 SizeRef=1623,993 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=203,984 Selected=0x6F7CD859
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1418,984 CentralNode=1 Selected=0x4ECA0541
-  DockNode    ID=0x00000004 Parent=0x48A148F3 SizeRef=247,993 Selected=0xE87781F4
+DockSpace       ID=0x48A148F3 Window=0xB3E485BE Pos=0,83 Size=1600,817 Split=X
+  DockNode      ID=0x00000003 Parent=0x48A148F3 SizeRef=1623,993 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=292,984 Split=Y Selected=0x6F7CD859
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=292,586 Selected=0x6F7CD859
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=292,229 Selected=0x0D42FFB9
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1578,984 CentralNode=1 Selected=0x4ECA0541
+  DockNode      ID=0x00000004 Parent=0x48A148F3 SizeRef=247,993 Selected=0xE87781F4
 
