--- a/FantyEditor/imgui.ini
+++ b/FantyEditor/imgui.ini
@@ -11,25 +11,25 @@ DockId=0x00000004,0
 
 [Window][Toolbar]
 Pos=-1,21
-Size=1602,62
+Size=1538,62
 Collapsed=0
 
 [Window][MainDockspaceWindow]
 Pos=0,65
-Size=1600,835
+Size=1536,825
 Collapsed=0
 
 [Window][Asset Browser]
-Pos=0,83
-Size=292,586
+Pos=0,518
+Size=297,372
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000008,0
 
 [Window][Room Editor]
-Pos=294,83
-Size=1306,817
+Pos=299,83
+Size=915,627
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000005,0
 
 [Window][About Dear ImGui]
 Pos=60,60
@@ -62,17 +62,33 @@ Size=844,728
 Collapsed=0
 
 [Window][Output]
-Pos=0,671
-Size=292,229
+Pos=299,712
+Size=915,178
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Inspector]
+Pos=1216,83
+Size=320,807
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Hierarchy]
+Pos=0,83
+Size=297,433
+Collapsed=0
+DockId=0x00000007,0
+
 [Docking][Data]
-DockSpace       ID=0x48A148F3 Window=0xB3E485BE Pos=0,83 Size=1600,817 Split=X
-  DockNode      ID=0x00000003 Parent=0x48A148F3 SizeRef=1623,993 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=292,984 Split=Y Selected=0x6F7CD859
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=292,586 Selected=0x6F7CD859
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=292,229 Selected=0x0D42FFB9
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1578,984 CentralNode=1 Selected=0x4ECA0541
-  DockNode      ID=0x00000004 Parent=0x48A148F3 SizeRef=247,993 Selected=0xE87781F4
+DockSpace         ID=0x48A148F3 Window=0xB3E485BE Pos=0,83 Size=1536,807 Split=X
+  DockNode        ID=0x00000009 Parent=0x48A148F3 SizeRef=1550,971 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000009 SizeRef=297,971 Split=Y Selected=0x6F7CD859
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=291,521 Selected=0x29EABFBD
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=291,448 Selected=0x6F7CD859
+    DockNode      ID=0x00000002 Parent=0x00000009 SizeRef=1251,971 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1623,993 Split=Y
+        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1306,791 CentralNode=1 Selected=0x4ECA0541
+        DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1306,178 Selected=0x0D42FFB9
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=247,993 Selected=0xE87781F4
+  DockNode        ID=0x0000000A Parent=0x48A148F3 SizeRef=320,971 Selected=0xE7039252
 
