--- a/FantyEditor/BeefProj.toml
+++ b/FantyEditor/BeefProj.toml
@@ -6,7 +6,13 @@ Name = "FantyEditor"
 StartupObject = "FantyEditor.Program"
 
 [Platform.Windows]
-IconFile = "$(ProjectDir)/assets/desktop/icon_1024.ico"
+IconFile = "$(ProjectDir)/assets/desktop/icon_32.ico"
+Company = "Boxsubmus"
+Product = "Fanty Editor"
+Copyright = "2023"
 
 [Configs.Release.Win64]
+PostBuildCmds = ["CopyFilesIfNewer(\"$(ProjectDir)/assets\", \"$(BuildDir)\")"]
+
+[Configs.Debug.Win64]
 PostBuildCmds = ["CopyFilesIfNewer(\"$(ProjectDir)/assets\", \"$(BuildDir)\")"]
